# tcldtrace

./: Makefile.in  README  README.md  configure  configure.in  dtraceConfig.h.in  license.terms  pkgIndex.tcl  pkgIndex.tcl.in
demos/: dtracedemo.tcl  dtracegui.tcl  netdemo.tcl
doc/: dtrace.man  dtrace.n
generic/: Makefile  dtrace.c  dtrace.h  pkgIndex.tcl
tests/: all.tcl  dtrace.test
tools/doctools/: doctools.tcl
